--- a/ZohoApplication/src/main/resources/application.properties
+++ b/ZohoApplication/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8011
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
 spring.datasource.url = jdbc:mysql://localhost:3306/zoho
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = Zeus@2003
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
